# axum-postgresql-simplecrud

./: .env.example  .gitignore  Cargo.toml  README.md  setup.sh
migrations/: 20250921044405_create_todos_table.sql
src/: main.rs
src/db/: mod.rs
